--- a/serverless.yml
+++ b/serverless.yml
@@ -19,8 +19,8 @@ provider:
   name: aws
   runtime: nodejs12.x
 
-package:
-  individually: true
+#package:
+#  individually: true
 
 
 # you can add packaging information here
