--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
   "author": "Wes Duff <wesley.duff@charter.com>",
   "license": "MIT",
   "dependencies": {
+    "@babel/polyfill": "^7.8.3",
+    "aws-sdk": "^2.625.0",
+    "babel-polyfill": "^6.26.0",
     "source-map-support": "^0.5.4"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.3",
-    "babel-plugin-source-map-support": "^2.0.1",
-    "babel-preset-env": "^1.6.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-source-map-support": "^2.1.1",
+    "@babel/preset-env": "^7.8.4",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-export-default-from": "^7.8.3",
     "serverless-offline": "^3.20.1",
     "serverless-webpack": "^5.3.1",
     "webpack": "^4.2.0",
