--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "babel-plugin-transform-imports": "^2.0.0",
     "jest": "^24.7.1",
+    "mongodb-memory-server": "^6.2.4",
     "serverless-offline": "^3.20.1",
     "serverless-webpack": "^5.3.1",
     "webpack": "^4.2.0",
