--- a/testConfig/.babelrc
+++ b/testConfig/.babelrc
@@ -1,7 +1,7 @@
 {
   "presets": [
     ['@babel/preset-env',
-      {targets: {node: "12.x"}}
+      {targets: {node: "current"}}
     ]
   ],
   "plugins" : [
