--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@babel/polyfill": "^7.8.3",
     "aws-sdk": "^2.625.0",
     "babel-polyfill": "^6.26.0",
+    "moment": "^2.24.0",
     "mongodb": "^3.5.4",
     "source-map-support": "^0.5.4"
   },
